--- a/jwt-auth/src/Components/css/home.css
+++ b/jwt-auth/src/Components/css/home.css
@@ -17,6 +17,9 @@ body {
 }
 
 .home{
-    background-color:#FFF;
+    background-color:#000000;
     height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 1fr;
+    color:#FFF;
 }
