to complete project

--- a/jwt-auth/src/Components/css/home.css
+++ b/jwt-auth/src/Components/css/home.css
@@ -1,25 +1,24 @@
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    text-decoration: none;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-decoration: none;
 }
 
 :root {
-    --main-color:#20466A;
-    --second-color:#E1B53A;
+  --main-color: #20466a;
+  --second-color: #e1b53a;
 }
-
 
 body {
-    height: 100vh;
+  height: 100vh;
 }
 
-.home{
-    background-color:#000000;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 50% 1fr;
-    color:#FFF;
+.home {
+  background-color: #000000;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 30% 1fr;
+  color: #fff;
 }
