--- a/jwt-auth/src/Components/css/leftHome.css
+++ b/jwt-auth/src/Components/css/leftHome.css
@@ -1,33 +1,70 @@
 .leftHome {
-    background-color:#ddcbaf5d;
-    display: flex;
-    justify-content: center;
-    padding:100px 0;
-    
+  background-color: #ddcbaf5d;
+  display: flex;
+  justify-content: center;
+  padding: 30px 0;
 }
 
-.leftHome .progress-box {
-    background-color: #DDCBAF;
-    height: 300px;
-    width: 400px;
-    border-radius: 8% ;
-    padding:20px 20px;
-    color: black;
-    position: relative;
-    box-shadow: 8px 11px 0px rgb(8, 7, 7);
-    display: grid;
-    grid-template-rows: 20% 1fr;
-    
+.leftHome .task-box {
+  background-color: #ddcbaf;
+  height: 300px;
+  width: 400px;
+  border-radius: 8%;
+  padding: 20px 20px;
+  color: black;
+  position: relative;
+  box-shadow: 8px 11px 0px rgb(8, 7, 7);
+  display: grid;
+  grid-template-rows: 20% 1fr;
 }
-.leftHome .progress-box .box-title{
-    display: flex;
-    justify-content: center;
+.leftHome .task-box .box-title {
+  display: flex;
+  justify-content: center;
 }
 
-.leftHome .progress-box .box-content{
-    display: flex;
-    flex-direction: column;
-    row-gap:20px ;
-    font-size: 18px;
-    font-weight: bold;
+.leftHome .task-box .box-content {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.leftHome .task-box .box-content form {
+  margin-top: 8%;
+  margin-bottom: 8%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+.leftHome .task-box .box-content form input {
+  max-width: 100%;
+  border: none;
+  padding: 10px 15px;
+  background-color: #976b24;
+  color: #fff;
+  font-weight: bold;
+  outline: none;
+  border-radius: 10px;
+  font-size: 16px;
+}
+
+.leftHome .task-box .box-content form input::placeholder {
+  color: #fff;
+  font-weight: bold;
+  font-size: 12px;
+  opacity: 50%;
+}
+
+.leftHome .task-box .box-content form .btn-submit {
+  margin-top: 20px;
+  font-size: 20px;
+  cursor: pointer;
+  scale: 1;
+  transition: 0.4s;
+  background-color: #5f5039;
+}
+
+.leftHome .task-box .box-content form .btn-submit:hover {
+  scale: 1.1;
 }
